# facalty

./: .gitignore  Cargo.toml  README.md
crates/facalty-engine/: Cargo.toml  README.md
crates/facalty-engine/src/: lib.rs
crates/facalty-engine/src/parsing/: mod.rs
crates/facalty-engine/src/types/: ast.rs  mod.rs
crates/facalty-engine/src/types/glue/: functions.rs  mod.rs  number.rs
crates/facalty-repl/: Cargo.toml  README.md
crates/facalty-repl/src/: main.rs
