[package]
name = "facalty-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/devmcsam/facalty/crates/facalty-engine"
homepage = "https://github.com/devmcsam/facalty/crates/facalty-engine"
description.workspace = true
readme = "README.md"

[dependencies]
