[package]
name = "facalty-repl"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/devmcsam/facalty/crates/facalty-repl"
homepage = "https://github.com/devmcsam/facalty/crates/facalty-repl"
description = "A command line interface for the facalty library"
readme = "README.md"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }